# jinwonkim.art

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  package-lock.json  package.json
cms/: .env  .gitignore  Cargo.toml  docker-compose.yaml
cms/migrations/: 20220514210210_initial.sql
cms/scripts/: create-local.sh  migrate-local.sh
cms/src/: main.rs
cms/src/controllers/: admin.rs  categories.rs  images.rs  mod.rs  views.rs
cms/src/controllers/admin/: about.rs  category.rs  faq.rs  image.rs  mod.rs
cms/src/model/: category.rs  error.rs  faq.rs  image.rs  mod.rs  session.rs  user.rs
cms/src/model/forms/: about.rs  faq.rs  image.rs  mod.rs
cms/src/services/: auth.rs  database.rs  image_store.rs  mod.rs  password.rs  static_files.rs
cms/styles/: global.css
cms/templates/: about.html  admin.html  admin_about.html  admin_categories.html  admin_faq.html  admin_header.html  admin_images.html  categories.html  common.html  faq.html  homepage.html  images.html  macros.html
images/: 81c059aa-1119-4e30-ac21-e7cc493673a1
js/: cropper.min.js
migrations/: 20220514210210_initial.sql  20230828100651_order-categories.sql  20230828111512_hide-on-homepage.sql
scripts/: backup.sh  build-from-scratch.sh  deploy.sh  make-password-hash.sh
src/: cli.rs  main.rs
src/controllers/: images.rs  mod.rs  views.rs
src/model/: about.rs  category.rs  db.rs  error.rs  faq.rs  image.rs  mod.rs
src/services/: auth.rs  database.rs  mod.rs  password.rs  static_files.rs  (+1 more)
styles/: global.css  home.css  showcase.css
systemd/: bootstrap.sh  jinwonkim-art.service
templates/: about.html  admin.html  admin_about.html  admin_categories.html  admin_edit_image.html  admin_edit_image_thumbnail_crop.html  admin_faq.html  admin_header.html  admin_images.html  common.html  faq.html  header.html  images.html  macros.html
www/: package.json
(+12 files in other folders)
