[package]
name = "jinwonkim-art"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5.6", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite"] }
tera = "1.15"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
uuid = { version = "1.1.1", features = ["v4"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
anyhow = "1.0.58"
base64 = "0.13.0"
argon2 = { version = "0.4.1", features = ["std"] }
image = "0.24.5"
clap = { version = "4.4.0", features = ["derive"] }
markdown = "1.0.0-alpha.12"

[package.metadata.deb]
maintainer = "sam.cutler@protonmail.com"
copyright = "2023, Sam Cutler"
extended-description = "art website"
priority = "optional"
assets = [
  ["target/x86_64-unknown-linux-gnu/release/jinwonkim-art", "/usr/bin/", "755"],
  ["styles/*", "/opt/jinwonkim.art/styles", "755"],
  ["js/*", "/opt/jinwonkim.art/js", "755"],
  ["templates/*", "/opt/jinwonkim.art/templates", "755"],
]
maintainer-scripts = "systemd/"
systemd-units = { enable = true }
