[package]
name = "cms"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version="0.5.6", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite" ]}
tera = "1.15"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
uuid = { version = "1.1.1", features = [ "v4" ]} 
tower-http = { version = "0.3.0", features = ["fs", "trace"] }